<resources>
    <string name="app_name">JJJFIT</string>
    <string name="jjj_text">JJJ</string>
    <string name="fit_text">FIT</string>
    <string name="carlos_sanchez_17">carlos_sanchez_17</string>
    <string name="invalid_email">Por favor, introduce una dirección de correo electrónico válida</string>
    <string name="empty_password">Por favor, introduzca su contraseña</string>
    <string name="login_error">Error al insertar datos de inicio de sesión</string>
    <string name="invalid_credentials">Credenciales no válidas</string>
    <string name="login_success">¡Has iniciado sesión exitosamente!</string>
    <string name="no_subscription_days">No tienes días de suscripción disponibles</string>
    <string name="user_not_registered">El usuario no está registrado</string>
    <string name="invalid_password">Contraseña inválida</string>
    <string name="dni_pattern">\\d{8}[a&#8211;zA&#8211;Z]</string>
    <string name="telefono_pattern">\\d{9}</string>
    <string name="email_pattern">[a&#8211;zA&#8211;Z0&#8211;9._%+&#8211;]+@(gmail|outlook|yahoo)\\.(com|es|net|org|edu|gov|info|biz|co\\.uk)</string>
    <string name="empty_field_message">Por favor, complete todos los campos</string>
    <string name="invalid_dni_message">Por favor, introduce un DNI válido</string>
    <string name="invalid_telefono_message">Introduce un número de teléfono válido</string>
    <string name="invalid_email_message">Por favor, introduce un correo válido (@gmail, @outlook, @yahoo)</string>
    <string name="update_failed_message">La actualización falló. Por favor, inténtalo de nuevo.</string>
    <string name="user_not_found_message">Usuario no encontrado</string>
    <string name="insert_user_data_failed_message">La inserción de los datos del usuario ha fallado</string>
    <string name="complete_fields">Por favor, completa todos los campos</string>
    <string name="email_exists">Ya existe una cuenta con este correo electrónico</string>
    <string name="registration_success">¡Registro exitoso! Bienvenido</string>
    <string name="registration_failed">El registroData ha fallado</string>
    <string name="welcome_email_subject">Bienvenido a nuestra App</string>
    <string name="welcome_email_body">¡Gracias por registrarte en nuestra aplicación!</string>
    <string name="welcome_email_error">No se pudo enviar el correo de bienvenida</string>
    <string name="rutinas">RUTINAS</string>
    <string name="nutricionista">NUTRICIONISTA</string>
    <string name="acceso_gym">ACCESO AL GYM 24/7</string>
    <string name="clases_programadas">CLASES PROGRAMADAS</string>
    <string name="complementos">COMPLEMENTOS</string>
    <string name="coach">COACH</string>
    <string name="confirmacion_imagen_descripcion">Imagen de confirmación</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="nutricion">Nutrición</string>
    <string name="perfil">Perfil</string>
    <string name="tienda">Tienda</string>
    <string-array name="gender_array">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>
    <string name="error_email_not_found">Error: Email no encontrado</string>
    <string name="error_body_type_not_selected">Error: Tipo de cuerpo no seleccionado</string>
    <string name="select_body_type_message">Por favor, selecciona un tipo de cuerpo</string>
    <string name="ectomorfo">Ectomorfo</string>
    <string name="mesomorfo">Mesomorfo</string>
    <string name="endomorfo">Endomorfo</string>
    <string name="dificultad">Ta dificil</string>
    <string name="dieciseis">16</string>
    <string name="ochenta">80</string>
    <string name="treinta">30</string>
    <string name="calentamiento">Calienta Panza</string>
    <string name="texto_recomendado">Recomendado</string>
    <string name="texto_objetivo">Objetivo:</string>
    <string name="texto_dificultad">Dificultad:</string>
    <string name="texto_semanas">Semanas:</string>
    <string name="texto_sesiones">Sesiones:</string>
    <string name="texto_calentamiento">Calentamiento</string>
    <string name="descripcion_imagen_check">Otro éxito</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="texto_definicion">Definición</string>
    <string name="texto_volumen">Volumen</string>
    <string name="texto_semana_volumen">Semana 1 &#8211; Volumen</string>
    <string name="texto_jueves">Jueves</string>
    <string name="texto_ptc">PECHO TRICEPS CORE</string>
    <string name="texto_press_banca_pesado">PRESS BANCA PESADO</string>
    <string name="reps_press_banca">3x4 RP</string>
    <string name="texto_fondos_cerrados">FONDOS CERRADOS EN PARALELAS</string>
    <string name="reps_fondos">3x6&#8211;8 + 2DS</string>
    <string name="texto_cruce_polea">CRUCE DE POLEA BAJA</string>
    <string name="reps_polea_baja">2x12&#8211;15 + 1xFALLO</string>
    <string name="texto_press_frances_mancuerna">PRESS FRANCÉS MANCUERNA</string>
    <string name="reps_press_frances">3x10&#8211;12</string>
    <string name="texto_ext_triceps">EXT. TRICEPS EN POLEA</string>
    <string name="reps_extension_triceps">3x12 + 1XMYOREPS</string>
    <string name="texto_press_palof">PRESS PALOF</string>
    <string name="reps_press_palof">3x10</string>
    <string name="boton_video">Video</string>
    <string name="descripcion_boton_video_press_banca">Video de Press Banca</string>
    <string name="descripcion_boton_video_fondos">Video de Fondos</string>
    <string name="descripcion_boton_video_polea">Video de Polea</string>
    <string name="descripcion_boton_video_frances_mancuerna">Video de Press Francés con Mancuerna</string>
    <string name="descripcion_boton_video_ext_triceps">Video de Extensión de Tríceps en Polea</string>
    <string name="descripcion_boton_video_press_palof">Video de Press Palof</string>
    <string name="descripcion_image_press_frances">Descripción de la imagen de Press Francés</string>
    <string name="descripcion_icono_pesas">Descripción del icono de pesas</string>
    <string name="descripcion_icono_bulldog">Descripción del icono de bulldog</string>
    <string name="descripcion_icono_definicion">Descripción del icono de definición</string>
    <string name="descripcion_icono_nivel">Descripción del icono de nivel</string>
    <string name="descripcion_imagen_pbp">Descripción de la imagen PBP</string>
    <string name="descripcion_imagen_fondos">Descripción de la imagen de fondos</string>
    <string name="descripcion_imagen_cruces">Descripción de la imagen de cruces</string>
    <string name="descripcion_imagen_ext_triceps">Descripción de la imagen de extensión de tríceps</string>
    <string name="descripcion_imagen_palof">Descripción de la imagen de Palof</string>
    <string name="descripcion_texto_press_palof">Texto de Press Palof</string>
    <string name="descripcion_reps_press_palof">3x10</string>
    <string name="texto_viernes">Viernes</string>
    <string name="texto_ptc2">FULLBODY</string>
    <string name="texto_dominadas_pronas">DOMINADAS PRONAS</string>
    <string name="reps_dominadas">3x10&#8211;15 </string>
    <string name="texto_peso_muerto">PESO MUERTO</string>
    <string name="reps_peso">3x5 &#8211; 7</string>
    <string name="texto_press_banca_mancuernas">PRESS BANCA MANCUERNAS</string>
    <string name="reps_press_banca_m">3x8&#8211;10 + 1RP</string>
    <string name="texto_laterales_polea">ELEVACIÓNES LATERALES EN POLEA</string>
    <string name="reps_laterales_p">3x12&#8211;14 + 2DS</string>
    <string name="texto_curl_mancuernas">CURL INCLINADO MANCUERNAS</string>
    <string name="reps_curl_m">2x12 + 1XMYOREPS</string>
    <string name="texto_ext_polea">EXT.TRICEPS EN POLEA</string>
    <string name="reps_extencion_polea">2x15 + 1XMYOREPS</string>
    <string name="descripcion_boton_video_dominadas_pronas">Video de Dominadas Pronas</string>
    <string name="descripcion_boton_video_peso_muerto">Video de peso muerto</string>
    <string name="descripcion_boton_video_press">Video press banca mancuernas</string>
    <string name="descripcion_boton_video_elevacion_polea">Video de Elevacion Laterales en polea</string>
    <string name="descripcion_boton_video_curl_m">Video de curl inclinado con mancuernas</string>
    <string name="descripcion_boton_video_extencion_triceps_polea">Video de Extencion de tricepes polea</string>
    <string name="descripcion_imagen_peso_muerto">Descripción de la imagen de peso muerto</string>
    <string name="descripcion_imagen_polea">Descripción de la imagen Polea</string>
    <string name="descripcion_imagen_dominadas_p">Descripción de la imagen de dominas pronas</string>
    <string name="descripcion_imagen_pressm">Descripción de la imagen de press banca mancuernas</string>
    <string name="descripcion_imagen_curl_m">Descripción de la imagen de curl inclinado mancuernas</string>
    <string name="descripcion_imagen_triceps">Descripción de la imagen de extencion de triceps polea</string>
    <string name="descripcion_texto_extencion_trcieps_polea">Texto de extencion triceps polea</string>
    <string name="texto_semana_definicion">Definición</string>
    <string name="texto_lunes">Lunes</string>
    <string name="texto_pierna">TIRON + PIERNA</string>
    <string name="texto_dominadas">DOMINADAS (PUEDES LASTRARTE)</string>
    <string name="reps_dominadas2">3x5 &#8211;7</string>
    <string name="texto_remo_mancuerna">REMO MANCUERNA (APOYADO BANCO)</string>
    <string name="reps_remo_mancuerna">3x8 &#8211;10</string>
    <string name="texto_peso_muerto_rumano">PESO MUERTO RUMANO</string>
    <string name="reps_peso_muerto_rumano">3x8 &#8211;10</string>
    <string name="texto_jalon_prono_pecho">JALÓN PRONO AL PECHO</string>
    <string name="reps_jalon_prono_pecho">3x10&#8211;12</string>
    <string name="texto_face_pull">FACEPULL</string>
    <string name="reps_press_facepull">2x13&#8211;15</string>
    <string name="texto_curl_barra">CURL BARRA</string>
    <string name="reps_curl_barra">3x8&#8211;10</string>
    <string name="descripcion_imagen_dominadas">Descripción de la imagen de dominas</string>
    <string name="descripcion_imagen_remo_mancuernas">Descripción de la imagen de remo mancuernas</string>
    <string name="texto_press_militar_barra">PRESS MILITAR BARRA</string>
    <string name="texto_jalon_neutro_pecho">JALÓN NEUTRO AL PECHO</string>
    <string name="texto_peso_press_plano_mancuerna">PRESS PLANO MANCUERNAS</string>
    <string name="texto_cruce_polea_baja_unilateral">CRUCE POLEA BAJA UNILATERAL</string>
    <string name="texto_remo_neutro_polea">REMO NEUTRO EN POLEA</string>
    <string name="texto_laterales_polea_torso">ELEV.LATERALES EN POLEA TORSO INCLINADO</string>
    <string name="texto_press_banca_plano_barra">PRESS BANCA PLANO CON BARRA</string>
    <string name="texto_sentadilla">SENTADILLA</string>
    <string name="texto_press_militar_mancuerna">PRESS MILITAR MANCUERNA</string>
    <string name="texto_press_inclinado_mancuerna">PRESS INCLINADO MANCUERNAS</string>
    <string name="texto_cruce_polea_baja">CRUCE POLEA BAJA</string>
    <string name="texto_elevacion_lateral">ELEVACION LATERAL</string>
    <string name="texto_peso_muerto_viernes">PESO MUERTO</string>
    <string name="texto_zancadas_estaticas_multipower">ZANCADAS ESTÁTICAS MULTIPOWER</string>
    <string name="texto_prensa_inclinada">PRENSA INCLINADA</string>
    <string name="texto_patada_triceps_polea">PATADA DE TRICEPS POLEA</string>
    <string name="texto_curl_biceps_alterno_sentado_mancuernas">CURL BICEPS ALTERNO SENTADO MANCUER.</string>
    <string name="texto_ext_triceps_overhead">EXT. TRICEPS OVERHEAD CON CUERDA POLEA</string>
    <string name="texto_rueda_abs_pie">RUEDA ABS DE PIE</string>
    <string name="texto_dragon_flag">DRAGON FLAG</string>
    <string name="texto_stir_the_pot">STIR THE POT</string>
    <string name="texto_giros_rusos_barra">GIROS RUSOS BARRA</string>
</resources>