<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">

    <TextView
        android:id="@+id/textoObjetivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/texto_objetivo"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconoPesas"
        android:layout_width="26dp"
        android:layout_height="28dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/descripcion_icono_pesas"
        android:src="@drawable/pesas"
        app:layout_constraintStart_toEndOf="@+id/textoObjetivo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoSemanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/texto_semanas"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoObjetivo" />

    <TextView
        android:id="@+id/textoNumSemanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/dieciseis"
        android:text="@string/dieciseis"
        app:layout_constraintStart_toEndOf="@+id/textoSemanas"
        app:layout_constraintTop_toBottomOf="@+id/iconoPesas" />

    <TextView
        android:id="@+id/textoDificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/dificultad"
        android:text="@string/texto_dificultad"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/iconoNivel"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView

        android:id="@+id/iconoNivel"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="25dp"

        android:background="#FF4500"
        android:contentDescription="@string/descripcion_icono_nivel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Image.Circle.WithBorder" />

    <TextView
        android:id="@+id/textoSesiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="42dp"
        android:text="@string/texto_sesiones"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/textoNumSesiones"
        app:layout_constraintTop_toBottomOf="@+id/textoDificultad" />

    <TextView
        android:id="@+id/textoNumSesiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/ochenta"
        android:text="@string/ochenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconoNivel" />

    <View
        android:id="@+id/separador2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="25dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/textoNumSesiones"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>