<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <include
        android:id="@+id/header"
        layout="@layout/fragment_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:padding="8dp">

            <!-- Card for Lunes Volumen -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardLunesVolumen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#B6AEAE"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="326dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lunes: Tiron + Pierna"
                        android:textColor="#BD5D5D"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/texto_dominadas"
                        android:textColor="#FAF6F6"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_remo_mancuerna"
                        android:textColor="#EFEAEA"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_peso_muerto_rumano"
                        android:textColor="#F1ECEC"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_jalon_prono_pecho"
                        android:textColor="#F3F3F3"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_face_pull"
                        android:textColor="#F3F3F3"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_curl_barra"
                        android:textColor="#F3F3F3"
                        android:textSize="16sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card for Martes Volumen -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardMartesVolumen"
                android:layout_width="1dp"
                android:layout_height="328dp"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#B6AEAE"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Martes: Torso"
                        android:textColor="#BD5D5D"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/texto_press_militar_barra"
                        android:textColor="#EDE9E9"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_jalon_neutro_pecho"
                        android:textColor="#EDE9E9"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_peso_press_plano_mancuerna"
                        android:textColor="#EDE9E9"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_cruce_polea_baja_unilateral"
                        android:textColor="#EDE9E9"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_remo_neutro_polea"
                        android:textColor="#EDE9E9"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_laterales_polea_torso"
                        android:textColor="#EDE9E9"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card for Miércoles Volumen -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardMiercolesVolumen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#B6AEAE"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="334dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Miércoles: Abdominales"
                        android:textColor="#BD5D5D"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/texto_rueda_abs_pie"
                        android:textColor="#EDE9E9"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_dragon_flag"
                        android:textColor="#F3EFEF"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_stir_the_pot"
                        android:textColor="#FDF6F6"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_giros_rusos_barra"
                        android:textColor="#FDF6F6"
                        android:textSize="16sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card for Jueves Volumen -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardJuevesVolumen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#B6AEAE"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Jueves: Empuje + Pierna"
                        android:textColor="#BD5D5D"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/texto_press_banca_plano_barra"
                        android:textColor="#F1EDED"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_sentadilla"
                        android:textColor="#F1ECEC"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_press_militar_mancuerna"
                        android:textColor="#ECE6E6"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_press_inclinado_mancuerna"
                        android:textColor="#ECE6E6"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_cruce_polea_baja"
                        android:textColor="#ECE6E6"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_elevacion_lateral"
                        android:textColor="#ECE6E6"
                        android:textSize="16sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card for Viernes Volumen -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardViernesVolumen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#B6AEAE"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Viernes: Pierna Brazo Core"
                        android:textColor="#BD5D5D"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/texto_peso_muerto_viernes"
                        android:textColor="#ECEAEA"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_zancadas_estaticas_multipower"
                        android:textColor="#F1EAEA"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_prensa_inclinada"
                        android:textColor="#EFE7E7"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_patada_triceps_polea"
                        android:textColor="#EFE8E8"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_curl_biceps_alterno_sentado_mancuernas"
                        android:textColor="#ECE8E8"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/texto_ext_triceps_overhead"
                        android:textColor="#E4DEDE"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnMainMenuVolumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_selector"
        android:padding="12dp"
        android:text="Menu Principal"
        android:textColor="#131313"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
